--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -459,7 +459,7 @@ The following design will achieve the output of the Load LED and pilot LED that 
 Using the above equations for $V_H=5$ and $V_L=0$ ,$\frac{R_1}{R_2}=\frac{1}{25}$. With $R_2$ chosen as 12k\textohm ($R_1$ in figure \ref{fig:loadcont})\ $R_1$ will be 300k\textohm \ ($R_2+R_8$ in figure \ref{fig:loadcont}). $V_{REF}$ is then calculated to be 2.5V (5V voltage divided with $R_3$ and $R_4$ in figure \ref{fig:loadcont}). A voltage following op amp is connected between the LDR circuit and the hysteresis to prevent the positive feedback from changing the actual input voltage. 
 
 To achieve the one \textbf{on} condition for the load LED in table \ref{tab:truthtab} the \textbf{light condition} is sent to an NMOS gate that is in series with the lowside switch from section \ref{sec:loswide}. This then requires the "light condition" \textbf{and} "load control" to be high for current to flow through the load. The same concept is applied for the PWM signal. This can be seen in the load control part of figure \ref{fig:loadcont}.
- A momentary switch is implemented by using a op amp sr-latch \cite{SR2}. The output of the SR latch is connected to the same output as the load control from section \ref{sec:loswide}. Diodes are connected between the two signals to prevent interference with the sr-latch This enables either the momentary switch or the beetle load control to enable the load control Mosfet, but current will only flow through the load if \textbf{light condition} and PWM are also high. 
+ A momentary switch is implemented by using a op amp sr-latch \cite{SR}. The output of the SR latch is connected to the same output as the load control from section \ref{sec:loswide}. Diodes are connected between the two signals to prevent interference with the sr-latch. This enables either the momentary switch or the beetle load control to enable the load control Mosfet, but current will only flow through the load if \textbf{light condition} and PWM are also high. 
 
 
 
@@ -507,3 +507,11 @@ This circuit will drive a current limited red LED with an op amp in the case tha
 \textbf{All op amp differential and common mode voltage are tabulated in appendix \ref{appen:opamp}}
 
 
+\section{Firmware}
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/A8/flowfirmware.png}
+	\caption{Firmware flow diagram}
+	\label{fig:flow}
+\end{figure}
