--- a/A5/References.bib
+++ b/A5/References.bib
@@ -1,4 +1,14 @@
 
+@misc{SR,
+	author = {{Aruna Rubasinghe}},
+	title = {Use an op amp as a set/reset flip-flop},
+	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
+	year = {2012}
+}
+
+
+
+
 @misc{NData,
 author = {{ON Semiconductor}},
 title = {2N7000 / 2N7002 / NDS7002A
@@ -264,19 +274,13 @@ year = {2015}
 
 
 
-@misc{SR2,
-	author = {{Aruna Rubasinghe}},
-	title = {Use an op amp as a set/reset flip-flop},
-	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
-	year = {2012}
-}
-
 @misc{difAmp,
 	author = {{Electronics Tutorials}},
 	title = {The Differential Amplifier},
 	url = {https://www.electronics-tutorials.ws/opamp/opamp_5.html},
 	year = {2018}
 }
+
 
 
 
