--- a/A5/Results.tex
+++ b/A5/Results.tex
@@ -272,7 +272,7 @@ The measured noise on the output of the TSC213 was found to be 40mV ($V_{PK-PK}$
    \caption[{NMOS final results}]{NMOS final Results   (a)  LT Spice simulation (b)Lowside circuit used }
     \label{fig:NMOScirc}
  \end{figure}
- The above LTspice simulation in figure \ref{subfig:nmosfig} was setup to have a load that had 100mA flowing through it. It shows that the NMOS was able to switch this amount of current with ease using a 5V control signal. Using this circuit practically the low side switching in figure \ref{fig:meas} was achieved, indicating that it was able to enable and disable discharge through the load.
+ The above LTspice simulation in figure \ref{subfig:nmosfig} was setup to have a load that had 100mA flowing through it. It shows that the NMOS was able to switch this amount of current with ease using a 5V control signal. Using this circuit practically the low side switching in figure \ref{fig:measNMOS} was achieved, indicating that it was able to enable and disable discharge through the load.
 
 
 \begin{figure}[!htb]
