--- a/A5/e344_A1_report.tex
+++ b/A5/e344_A1_report.tex
@@ -113,7 +113,7 @@
 \patchcmd{\ttlh@hang}{\noindent}{}{}{}
 \makeatother
  \usepackage[normalem]{ulem}
- 
+ \usepackage{wrapfig}
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Ignore up to here. 
