--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -519,54 +519,46 @@ In arduino's "version" of C there are two main structural components to the code
 \end{figure}
 
 \subsection{Calibration of ADC}
-Using eq.\ref{eq:adc} the ADC values are converted to the input voltages at the ADC. Then this value is used uniquely for each adc measurement to get the representative value.
-
-\begin{equation}
-		V_{in}=(\frac{5V\times ADC_{val} }{1023})	
-			\label{eq:adc}
-\end{equation}
+Using $V_{in}=(\frac{5V\times ADC_{val} }{1023})$ the ADC values are converted to the input voltages at the ADC. Then this value is used uniquely for each adc measurement to get the representative value. All the methods of calibration are linearly done.
 
 
 
 
 
 
-
-
-
-
-\begin{wrapfigure}{l}{0.45\textwidth}
+\begin{wrapfigure}{l}{0.38\textwidth}
 	\begin{center}
-		\includegraphics[width=0.4\textwidth]{./Figures/A8/batteryA8.png}
+		\includegraphics[width=0.38\textwidth]{./Figures/A8/batteryA8.png}
 	\end{center}
 	\caption{Battery ADC calibration}
 	\label{fig:A8bat}
 \end{wrapfigure}
 Using the below equation the ADC is calibrated to be the same as the measured values. $V_{adcHMeas}$ and $V_{adcLMeas}$ are voltages measured at the input to the adc when the battery voltage is at its min an max value. $V_{batADC}$ is the calculated input voltage that the arduino beetle is receiving.\newline
-$V_{Bat}=(V_{adcBat}-V_{adcMax})\times \frac{(V_{batMax}-V_{batMin})}{(V_{adcHMeas}-V_{adcLMeas})}+V_{batMax}$. In figure \ref{fig:A8bat} the data from the beetle is shown in comparison to multimeter measurements and it can be said that the calibration equation worked very well.
+$V_{Bat}=(V_{adcBat}-V_{adcMax})\times \frac{(V_{batMax}-V_{batMin})}{(V_{adcHMeas}-V_{adcLMeas})}+V_{batMax}$.The calibration points used can be seen in the annotations of figure \ref{fig:A8bat}. In figure \ref{fig:A8bat} the data from the beetle is shown in comparison to multimeter measurements and it can be said that the calibration equation worked very well.
 
 
 
-\begin{wrapfigure}{l}{0.45\textwidth}
+\begin{wrapfigure}{l}{0.38\textwidth}
 	\begin{center}
-		\includegraphics[width=0.4\textwidth]{./Figures/A8/supplyA8.png}
+		\includegraphics[width=0.38\textwidth]{./Figures/A8/supplyA8.png}
 	\end{center}
 	\caption{Supply ADC calibration}
 	\label{fig:A8sup}
 \end{wrapfigure}
 
-The supply voltage starts at zero and reaches a maximum, this makes it easier to calibrate because a singel measurement close to the maximum can be taken to determine the ratio of the adc input voltage to the actual supply voltage as can be seen in the following equation.
+The supply voltage starts at zero and reaches a maximum, this makes it easier to calibrate because a single measurement close to the maximum can be taken to determine the ratio of the adc input voltage to the actual supply voltage as can be seen in the following equation.
 
-$V_{Supply} = V_{supplyADC} \times \frac{V_{measuredSup}}{V_{measuredADCSup}}$. Once again in figure \ref{fig:A8sup} it can be seen that the multimeter measurements very closely resemble the calibrated ADC values.
+$V_{Supply} = V_{supplyADC} \times \frac{V_{measuredSup}}{V_{measuredADCSup}}$. The measured calibration point was at a adc voltage of 4.85V corresponding to 23.08V at the supply. Once again in figure \ref{fig:A8sup} it can be seen that the multimeter measurements very closely resemble the calibrated ADC values.
 
 
-\begin{wrapfigure}{l}{0.45\textwidth}
+\begin{wrapfigure}{l}{0.38\textwidth}
 	\begin{center}
-		\includegraphics[width=0.4\textwidth]{./Figures/A8/currentA8.png}
+		\includegraphics[width=0.38\textwidth]{./Figures/A8/currentA8.png}
 	\end{center}
 	\caption{Current ADC calibration}
 	\label{fig:A8curr}
 \end{wrapfigure}
 
-To calibrate the current to the correct value the value of $R_{shunt}$ was first determined from calculations. This was done by rearranging equation \ref{eq:refeq}. To do this the output voltage of 1.322V was measured as well as the discharge current of 85mA. An additional calibration point is the $V_{ref}$ value that is also measured. From figure \ref{fig:A8curr} it can be confirmed that the calibrated values are very close to the multimeter measurements.
+To calibrate the current to the correct value the value of $R_{shunt}$ was first determined from calculations. This was done by rearranging equation \ref{eq:refeq} to $R_{shunt}= \frac{(adcCurr-Vref)}{(50*currMeas)}$. To do this the output voltage of 1.322V was measured as well as the discharge current of 85mA. An additional calibration point is the $V_{ref}$ value that is also measured. From figure \ref{fig:A8curr} it can be confirmed that the calibrated values are very close to the multimeter measurements.
 
+The LDR value read does not need to specific final output only 100 at its maximum brightest and 0 at its darkest. To achieve this the ADC value was divided by 10 and subtracted from 110. $light_{out}=110-ADC_{light}/10$.
