working on the report

--- a/A5/References.bib
+++ b/A5/References.bib
@@ -1,10 +1,5 @@
 
-@misc{SR,
-	author = {{Aruna Rubasinghe}},
-	title = {Use an op amp as a set/reset flip-flop},
-	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
-	year = {2012}
-}
+
 
 
 
@@ -16,6 +11,7 @@ N-Channel Enhancement Mode Field Effect Transistor},
 url = {https://learn.sun.ac.za/pluginfile.php/2876543/mod_resource/content/0/2N7000.pdf},
 year = {2015}
 }
+
 @misc{LED,
 author = {{CREE}},
 title = {Cree® 5-mm Round LED 
@@ -173,9 +169,6 @@ year = {2017}
 }
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 @misc{STM,
 author = {{STMicroelectronics}},
 title = {LM217, LM317},
@@ -213,7 +206,6 @@ url = {https://learn.sun.ac.za/pluginfile.php/2893566/mod_resource/content/0/TO-
 year = {2018}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @misc{LF,
 author = {{Little Fuse}},
@@ -261,7 +253,7 @@ year = {2008}
 author = {{ Chaniotakis and Cory.}},
 title = {MCP6241/1R/1U/2/4},
 url = {https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-071j-introduction-to-electronics-signals-and-measurement-spring-2006/lecture-notes/24_op_amps3.pdf},
-year = {2006 }
+year = {2006}
 }
 
 
@@ -282,10 +274,23 @@ year = {2015}
 }
 
 
+@misc{codeX,
+	author = {{Kurt Coetzer}},
+	title = {UsedCode},
+	url = {https://learn.sun.ac.za/mod/resource/view.php?id=1575796},
+	year = {2021}
+}
+
+
+@misc{SR,
+	author = {{Aruna Rubasinghe}},
+	title = {Use an op amp as a set/reset flip-flop},
+	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
+	year = {2012}
+}
 
 
 
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
