--- a/A5/e344_A1_report.tex
+++ b/A5/e344_A1_report.tex
@@ -137,9 +137,13 @@
 \include{SystemDesign}
 %%%%%%%%%%%%%%%%%%%
 \include{DesignDetails}
+
 %%%%%%%%%%%%%
 \include{Results}
 \include{SystemResults.tex}
+
+\include{Firmware.tex}
+\include{PCSoftware.tex}
 % Bibliography
 \bibliography{References}
 
