--- a/A5/frontmatter/nomenclature.tex
+++ b/A5/frontmatter/nomenclature.tex
@@ -99,6 +99,7 @@
     \textdegree C & degrees Celcius.\\
     ADC & Analog to Digital Converter.\\
     LDR & Light Dependant Resistor\\
+    GUI& Graphical User Interface\\
     
 \end{tabular}
 \endgroup
